add map component

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grapesjs": "^0.19.5",
     "grapesjs-preset-webpage": "^0.1.11",
     "idb": "^7.0.2",
+    "leaflet": "^1.9.1",
     "lodash.debounce": "^4.0.8",
     "lru-cache": "^7.14.0",
     "p-queue": "^7.3.0",
