add map, box-background, new asset mgnmt, new page mngmt, new database layer

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start": "concurrently yarn:start:*",
     "serve:files": "serve  -l 3000 build",
     "serve:icons": "serve  -l 3001 -C static",
-    "setup": "node ./ci/processicons.mjs"
+    "setup": "node ./ci/processicons.mjs",
+    "build:explain": "esbuild-visualizer --metadata ./build/meta.index.json --exclude *.png && esbuild-visualizer --metadata ./build/meta.website.json --exclude *.png"
   },
   "author": "",
   "license": "ISC",
@@ -25,17 +26,30 @@
     "bulma": "^0.9.4",
     "bulma-list": "^1.2.0",
     "collect.js": "^4.34.3",
+    "events": "^3.3.0",
     "fuse.js": "^6.6.2",
     "grapesjs": "^0.19.5",
     "grapesjs-preset-webpage": "^0.1.11",
+    "html2canvas": "^1.4.1",
     "idb": "^7.0.2",
     "leaflet": "^1.9.1",
     "lodash.debounce": "^4.0.8",
+    "lodash.once": "^4.1.1",
     "lru-cache": "^7.14.0",
     "p-queue": "^7.3.0",
+    "pouchdb": "^7.3.0",
+    "pouchdb-adapter-idb": "^7.3.0",
     "react": "^18.2.0",
+    "rxdb": "^13.7.0",
+    "rxjs": "^7.5.7",
     "svelte": "^3.50.1",
     "svelte-awesome-color-picker": "^1.2.3",
+    "sweetalert": "^2.1.2",
+    "three": "^0.145.0",
+    "toastify-js": "^1.12.0",
+    "uppy": "^3.2.1",
+    "uuid": "^9.0.0",
+    "vanta": "^0.5.24",
     "zen-observable": "^0.8.15"
   },
   "devDependencies": {
@@ -44,6 +58,7 @@
     "esbuild": "^0.15.1",
     "esbuild-sass-plugin": "^2.3.2",
     "esbuild-svelte": "^0.7.1",
+    "esbuild-visualizer": "^0.3.1",
     "nodemon": "^2.0.19",
     "rimraf": "^3.0.2",
     "serve": "^14.0.1",
