--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@lyrasearch/lyra": "^0.2.7",
     "@tarekraafat/autocomplete.js": "^10.2.7",
     "animate.css": "^4.1.1",
+    "async-mutex": "^0.4.0",
     "bulma": "^0.9.4",
     "bulma-list": "^1.2.0",
     "collect.js": "^4.34.3",
     "events": "^3.3.0",
     "fuse.js": "^6.6.2",
-    "grapesjs": "^0.19.5",
+    "grapesjs": "^0.20.4",
     "grapesjs-preset-webpage": "^0.1.11",
     "html2canvas": "^1.4.1",
     "huge-uploader": "^1.0.6",
@@ -36,13 +37,14 @@
     "leaflet": "^1.9.1",
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
     "lodash.once": "^4.1.1",
     "lru-cache": "^7.14.0",
     "p-queue": "^7.3.0",
     "pouchdb": "^7.3.0",
     "pouchdb-adapter-idb": "^7.3.0",
     "react": "^18.2.0",
-    "rxdb": "^13.7.0",
+    "rxdb": "^13.17.1",
     "rxjs": "^7.5.7",
     "svelte": "^3.50.1",
     "svelte-awesome-color-picker": "^1.2.3",
