--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bulma": "^0.9.4",
     "bulma-list": "^1.2.0",
     "collect.js": "^4.34.3",
+    "compare-lists": "^1.0.10",
     "events": "^3.3.0",
     "fuse.js": "^6.6.2",
     "grapesjs": "^0.20.4",
@@ -40,6 +41,7 @@
     "lodash.isequal": "^4.5.0",
     "lodash.once": "^4.1.1",
     "lru-cache": "^7.14.0",
+    "morphdom": "^2.7.0",
     "p-queue": "^7.3.0",
     "pouchdb": "^7.3.0",
     "pouchdb-adapter-idb": "^7.3.0",
