--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,8 @@
     "lru-cache": "^7.14.1",
     "mime-types": "^2.1.35",
     "socket.io": "^4.5.4"
+  },
+  "devDependencies": {
+    "miniflare": "^2.12.1"
   }
 }
