--- a/package.json
+++ b/package.json
@@ -22,6 +22,30 @@
     "@iconify/json": "^2.1.99",
     "@lyrasearch/lyra": "^0.2.7",
     "@tarekraafat/autocomplete.js": "^10.2.7",
+    "@tiptap/core": "^2.0.0-beta.220",
+    "@tiptap/extension-blockquote": "^2.0.0-beta.220",
+    "@tiptap/extension-bold": "^2.0.0-beta.220",
+    "@tiptap/extension-code": "^2.0.0-beta.220",
+    "@tiptap/extension-code-block": "^2.0.0-beta.220",
+    "@tiptap/extension-color": "^2.0.0-beta.220",
+    "@tiptap/extension-document": "^2.0.0-beta.220",
+    "@tiptap/extension-dropcursor": "^2.0.0-beta.220",
+    "@tiptap/extension-gapcursor": "^2.0.0-beta.220",
+    "@tiptap/extension-hard-break": "^2.0.0-beta.220",
+    "@tiptap/extension-highlight": "^2.0.0-beta.220",
+    "@tiptap/extension-history": "^2.0.0-beta.220",
+    "@tiptap/extension-italic": "^2.0.0-beta.220",
+    "@tiptap/extension-link": "^2.0.0-beta.220",
+    "@tiptap/extension-paragraph": "^2.0.0-beta.220",
+    "@tiptap/extension-strike": "^2.0.0-beta.220",
+    "@tiptap/extension-subscript": "^2.0.0-beta.220",
+    "@tiptap/extension-superscript": "^2.0.0-beta.220",
+    "@tiptap/extension-text": "^2.0.0-beta.220",
+    "@tiptap/extension-text-style": "^2.0.0-beta.220",
+    "@tiptap/extension-typography": "^2.0.0-beta.220",
+    "@tiptap/extension-underline": "^2.0.0-beta.220",
+    "@tiptap/pm": "^2.0.0-beta.220",
+    "@tiptap/starter-kit": "^2.0.0-beta.220",
     "animate.css": "^4.1.1",
     "async-mutex": "^0.4.0",
     "bulma": "^0.9.4",
@@ -48,8 +72,10 @@
     "react": "^18.2.0",
     "rxdb": "^13.17.1",
     "rxjs": "^7.5.7",
+    "s-offline": "^0.5.1",
     "svelte": "^3.50.1",
     "svelte-awesome-color-picker": "^1.2.3",
+    "svelte-tooltip": "^1.2.0",
     "sweetalert": "^2.1.2",
     "three": "^0.145.0",
     "toastify-js": "^1.12.0",
