feat: add theme manager

--- a/package.json
+++ b/package.json
@@ -51,8 +51,11 @@
     "bulma": "^0.9.4",
     "bulma-list": "^1.2.0",
     "collect.js": "^4.34.3",
+    "color2k": "^2.0.2",
+    "colorthief": "^2.4.0",
     "compare-lists": "^1.0.10",
     "events": "^3.3.0",
+    "expiry-map": "^2.0.0",
     "fuse.js": "^6.6.2",
     "grapesjs": "^0.20.4",
     "grapesjs-preset-webpage": "^0.1.11",
@@ -67,6 +70,7 @@
     "lru-cache": "^7.14.0",
     "morphdom": "^2.7.0",
     "p-queue": "^7.3.0",
+    "pica": "^9.0.1",
     "pouchdb": "^7.3.0",
     "pouchdb-adapter-idb": "^7.3.0",
     "react": "^18.2.0",
