feat: add offline ai

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf build && yarn refresh && shx cp static/icons.json ./build/ && shx cp src/index.html ./build/",
     "refresh": "node ./ci/build.mjs",
-    "start:build": "yarn build && nodemon --watch src -e js,jsx,json,html,scss,svelte,css --exec \"yarn refresh\"",
+    "start:build": "yarn build && nodemon --watch src -e mjs,js,jsx,json,html,scss,svelte,css --exec \"yarn refresh\"",
     "start:servefiles": "yarn serve:files",
     "start:serveicons": "yarn serve:icons",
+    "start:serveai": "yarn serve:ai",
     "start": "concurrently yarn:start:*",
     "serve:files": "serve  -l 3000 build",
     "serve:icons": "serve  -l 3001 -C static",
+    "serve:ai": "serve  -l 3002 build",
     "setup": "node ./ci/processicons.mjs",
     "build:explain": "esbuild-visualizer --metadata ./build/meta.index.json --exclude *.png && esbuild-visualizer --metadata ./build/meta.website.json --exclude *.png"
   },
@@ -46,6 +48,7 @@
     "@tiptap/extension-underline": "^2.0.0-beta.220",
     "@tiptap/pm": "^2.0.0-beta.220",
     "@tiptap/starter-kit": "^2.0.0-beta.220",
+    "@xenova/transformers": "^2.2.0",
     "animate.css": "^4.1.1",
     "async-mutex": "^0.4.0",
     "bulma": "^0.9.4",
@@ -53,6 +56,7 @@
     "collect.js": "^4.34.3",
     "color2k": "^2.0.2",
     "colorthief": "^2.4.0",
+    "comlink": "^4.4.1",
     "compare-lists": "^1.0.10",
     "events": "^3.3.0",
     "expiry-map": "^2.0.0",
@@ -62,6 +66,7 @@
     "html2canvas": "^1.4.1",
     "huge-uploader": "^1.0.6",
     "idb": "^7.0.2",
+    "iterate-async": "^1.1.2",
     "leaflet": "^1.9.1",
     "lodash.debounce": "^4.0.8",
     "lodash.get": "^4.4.2",
